--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@
     --color-secondary-500: #774890;
     --color-secondary-700: #5c2874;
 
+    --color-offset-500: #f59c00;
+    --color-offset-700: #ef7e08;
+    --color-offset-900: #995205;
+
     --color-alert-500: #e8345d;
     --color-alert-700: #ce0c4f;
 }
@@ -16,6 +20,9 @@ body, html{
     padding: 0;
     width: 100%;
     height: 100%;
+}
+footer {
+    margin: 0 3em 50px 3em;
 }
 h1{
     color: var(--color-primary-500);
@@ -92,6 +99,233 @@ display: none;
 .quallen_container div{
     padding-left: 1em;
 }
+.chart_card{
+    margin: 1em 3em 3em 3em;
+    background: #d8d8d8
+    border-radius: 15px;
+    -moz-border-radius:15px;
+    -webkit-border-radius:15px;
+    box-shadow: 10px 10px 10px rgba(0,0,0,0.1);
+}
+.justify_left{
+    display: flex;
+    justify-content: left;
+}
+.justify_center{
+    display:flex;
+    justify-content: center;
+}
+.align_center{
+    display: flex;
+    align-items: center;
+}
+.gemeinsam_grid p {
+    padding: 1em 0 1em 1em;
+    margin: 0;
+}
+.gemeinsam_grid {
+    display: grid;
+    border-bottom-left-radius: inherit;
+    border-bottom-right-radius: inherit;
+    grid-template-columns: 3fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-template-areas: 
+    ". dog cat"
+    "tierp tierp_num1 tierp_num2"
+    "behan behan_num1 behan_num2"
+    "prax prax_num1 prax_num2"
+    "anza anza_num1 anza_num2"
+    "tiere tiere_input1 tiere_input2"
+    "anteil anteil_input1 anteil_input2"
+    "abgeg abgeg_input1 abgeg_input2";
+}
+
+#geme_title{
+    border-top-left-radius: inherit;
+    border-top-right-radius: inherit;
+    background: #e8345d;
+    overflow: hidden;
+}
+#geme_title h3{
+    color: #FFFFFF;
+    padding-left: 1em;
+}
+#cat{
+    grid-area: cat;
+}
+#dog{
+    grid-area: dog;
+}
+#tierp{
+    grid-area: tierp;
+}
+#tierp_num1{
+    grid-area: tierp_num1;
+}
+#tierp_num2{
+    grid-area: tierp_num2;
+}
+#behan{
+    grid-area: behan;
+}
+#behan_num1{
+    grid-area: behan_num1;
+}
+#behan_num2{
+    grid-area: behan_num2;
+}
+#prax{
+    grid-area: prax;
+}
+#prax_num1{
+    grid-area: prax_num1;
+}
+#prax_num2{
+    grid-area: prax_num2;
+}
+#anza{
+    grid-area: anza;
+}
+#anza_num1{
+    grid-area: anza_num1;
+}
+#anza_num2{
+    grid-area: anza_num2;
+}
+#tiere{
+    grid-area: tiere;
+}
+#tiere_input1{
+    grid-area: tiere_input1;
+}
+#tiere_input2{
+    grid-area: tiere_input2;
+}
+#anteil{
+    grid-area: anteil;
+}
+#anteil_input1{
+    grid-area: anteil_input1;
+}
+#anteil_input2{
+    grid-area: anteil_input2;
+}
+#abgeg{
+    grid-area: abgeg;
+}
+#abgeg_input1{
+    grid-area: abgeg_input1;
+}
+#abgeg_input2{
+    grid-area: abgeg_input2;
+}
+
+.monate_grid{
+    display:grid;
+    border-top-left-radius: inherit;
+    border-top-right-radius: inherit;
+    grid-template-columns: 1fr 3fr 1fr 1fr;
+    grid-template-areas: 
+    "fill_header monate monate_num1 monate_num2"
+    ". brave brave_num1 brave_num2"
+    ". mit mit_num1 mit_num2"
+    ". unges unges_num1 unges_num2";
+
+}
+.monate_grid p{
+    padding-left: 1em;
+}
+#monate{
+    grid-area: monate;
+    padding-left: 1em;
+    background: var(--color-primary-500);
+    
+}
+#monate h3{
+    color: #FFFFFF;
+}
+#monate_num1{
+    grid-area: monate_num1;
+    background: var(--color-primary-500);
+    color: #FFFFFF;
+}
+#monate_num1 h3{
+    color: #FFFFFF;
+}
+#monate_num2{
+    grid-area: monate_num2;
+    border-top-right-radius: inherit;
+    background: var(--color-primary-500);
+    color: #FFFFFF;
+}
+#fill_header{
+    grid-area:fill_header;
+    border-top-left-radius: inherit;
+    background: var(--color-primary-500);
+}
+#monate_num2 h3{
+    color: #FFFFFF;
+}
+#brave{
+    grid-area: brave;
+}
+#brave_num1{
+    grid-area: brave_num1;
+}
+#brave_num2{
+    grid-area: brave_num2;
+}
+#mit{
+    grid-area: mit;
+}
+#mit_num1{
+    grid-area: mit_num1;
+}
+#mit_num2{
+    grid-area: mit_num2;
+}
+#unges{
+    grid-area: unges;
+}
+#unges_num1{
+    grid-area: unges_num1;
+}
+#unges_num2{
+    grid-area: unges_num2;
+}
+#b18, #b19, #b20, #b21, #c18, #c19, #c20, #c21{
+    padding:0;
+} 
+.guage_container{
+    position: relative;
+    width: 720px;
+    height: 50px;
+    border-radius: 5px;
+    background: var(--color-offset-500);
+}
+.guage_slider{
+    position:absolute;
+    height: 50px;
+    border-top-left-radius: inherit;
+    border-bottom-left-radius: inherit;
+    top:0;
+    left:0;
+    background: var(--color-offset-900);
+
+}
+.block{
+    display: block;
+}
+
+.slider_container{
+    display: flex;
+}
+
+.bottom_num{
+    position:absolute;
+    top:60px;
+}
+
 .ui-loader, .ui-icon-loading{display: none;} 
 
 html {
@@ -115,8 +349,36 @@ html {
     top: 0;
     left: 0;
 }
+.logo{
+    padding-left: 1em;
+}
+.monate_cust_height{
+    height: 400px;
+}
 
-
+.top_margin{
+    margin-top: 1em;
+}
+.animal_container{
+    padding-right: 2em;
+    padding-left: 2em;
+}
+.circle{
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    justify-self: end;
+    align-self: center;
+}
+.slide_title{
+    padding-left: 2em;
+}
+.glossary{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr 3fr);
+    gap:1em;
+ 
+}
 .deactivated{background-color:rgba(12,12,12,0.7);}
 
 #scrolldown,  #scrollup{
