--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,7 @@ display: none;
     display:grid;
     border-top-left-radius: inherit;
     border-top-right-radius: inherit;
-    grid-template-columns: 1fr 3fr 1fr 1fr;
+    grid-template-columns: 100px 550px 1fr 1fr;
     grid-template-areas: 
     "fill_header monate monate_num1 monate_num2"
     ". brave brave_num1 brave_num2"
