--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 :root {
     --color-font: #35175d;
 
-    --color-primary-300: #c5ebe0;
+    --color-primary-300: rgba(0,0,0,0.1);
     --color-primary-500: #38b6ab;
     --color-primary-700: #00948e;
 
@@ -31,7 +31,7 @@ footer {
     margin-left:3em;
     margin-right:3em;
 }
-h1, h2, h3, h4, h5, p, a, button, input {
+h1, h2, h3, h4, h5, p, a, button, input, span {
     font-family: "Invention", sans-serif;
 }
 h1{
@@ -47,26 +47,29 @@ p, input{
     font-size: 14pt;
 }
 .tab_container {
+    margin:1em 0 2em 0;
     width:100%;
-    border-top-color: var(--color-secondary-700);
+    /*border-top-color: var(--color-secondary-700);
     border-top-style: solid;
-    border-top-width: 3px;
+    border-top-width: 3px;*/
     display:grid;
     grid-template-columns: 25% 25% 25% 25%;
+    background-color: rgba(36,16,45,1);
+
 }
 .tab_on{
     background: var(--color-secondary-700);
 }
 .tab_off{
-    background: hsla(0, 0%, 100%, 1);
-
+    background-color: rgba(255,255,255,0.5);
+    /*
     background: linear-gradient(90deg, hsla(0, 0%, 100%, 1) 0%, hsla(281, 49%, 31%, 1) 100%);
 
     background: -moz-linear-gradient(90deg, hsla(0, 0%, 100%, 1) 0%, hsla(281, 49%, 31%, 1) 100%);
 
     background: -webkit-linear-gradient(90deg, hsla(0, 0%, 100%, 1) 0%, hsla(281, 49%, 31%, 1) 100%);
 
-    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#FFFFFF", endColorstr="#5C2874", GradientType=1 );
+    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#FFFFFF", endColorstr="#5C2874", GradientType=1 );*/
 }
 .tab_font h3{
 margin:0;
@@ -132,10 +135,11 @@ display: none;
     align-items: center;
 }
 .gemeinsam_grid p {
-    padding: 1em 0 1em 1em;
+    padding: 0.5em 0 0.5em 1em;
     margin: 0;
 }
 .gemeinsam_grid {
+    margin-top:1em;
     display: grid;
     border-bottom-left-radius: inherit;
     border-bottom-right-radius: inherit;
@@ -150,17 +154,20 @@ display: none;
     "tiere tiere_input1 tiere_input2"
     "anteil anteil_input1 anteil_input2"
     "abgeg abgeg_input1 abgeg_input2";
+    padding-bottom:1em;
 }
 
 #geme_title{
     border-top-left-radius: inherit;
     border-top-right-radius: inherit;
-    background: #e8345d;
+    background: #c63231;
     overflow: hidden;
+    text-align: center;
 }
 #geme_title h3{
     color: #FFFFFF;
     padding-left: 1em;
+    font-size: 1.5em;
 }
 #cat{
     grid-area: cat;
@@ -246,19 +253,21 @@ display: none;
 }
 .monate_grid p{
     padding-left: 1em;
+    margin:0.5em 0 0.5em 0;
 }
 #monate{
     grid-area: monate;
     padding-left: 1em;
-    background: var(--color-primary-500);
-    
+    background: #602c6b;
 }
 #monate h3{
-    color: #FFFFFF;
+    color: #FFFFFF;    
+    font-size: 1.3em;
+
 }
 #monate_num1{
     grid-area: monate_num1;
-    background: var(--color-primary-500);
+    background: #602c6b;
     color: #FFFFFF;
 }
 #monate_num1 h3{
@@ -267,25 +276,28 @@ display: none;
 #monate_num2{
     grid-area: monate_num2;
     border-top-right-radius: inherit;
-    background: var(--color-primary-500);
+    background: #602c6b;
     color: #FFFFFF;
 }
 #fill_header{
     grid-area:fill_header;
     border-top-left-radius: inherit;
-    background: var(--color-primary-500);
+    background: #602c6b;
 }
 #monate_num2 h3{
     color: #FFFFFF;
 }
 #brave{
     grid-area: brave;
+    margin-top:1em;
 }
 #brave_num1{
     grid-area: brave_num1;
+    margin-top:1em;
 }
 #brave_num2{
     grid-area: brave_num2;
+    margin-top:1em;
 }
 #mit{
     grid-area: mit;
@@ -313,7 +325,7 @@ display: none;
     width: 600px;
     height: 50px;
     border-radius: 5px;
-    background: var(--color-offset-500);
+    background: #c63231;
 }
 .guage_slider{
     position:absolute;
@@ -322,7 +334,7 @@ display: none;
     border-bottom-left-radius: inherit;
     top:0;
     left:0;
-    background: var(--color-offset-900);
+    background: #602c6b;
 
 }
 .block{
@@ -331,6 +343,8 @@ display: none;
 
 .slider_container{
     display: flex;
+    margin-top:1em;
+
 }
 
 .bottom_num{
@@ -388,6 +402,8 @@ html {
 }
 .slide_title{
     padding-left: 2em;
+    padding-bottom:0.5em;
+    text-align: center;
 }
 .glossary{
     display: grid;
@@ -454,18 +470,25 @@ html {
     "monate6 monate6_dog monate6_cat monate6_dogcat monate6_dogcat"
     "monate9 monate9_dog monate9_cat monate9_dogcat monate9_dogcat"
     "ganzj ganzj_dog ganzj_cat ganzj_dogcat ganzj_dogcat";
+    padding-bottom:1em;
 }
+.behand_grid p{margin:0.5em 0 0.5em 0;}
+
+
 .margin_top_2{
     margin-top:2em;
 }
 #behand_title{
     border-top-left-radius: inherit;
     border-top-right-radius: inherit;
-    background: var(--color-offset-500);
+    background: #c63231;
     grid-area: behand_title;
+    margin-bottom: 1em;
 }
 #behand_title h3{
     color: #FFFFFF;
+    font-size: 1.5em;
+    text-align: center;
 }
 #behand_title, #ihr, #monate3, #monate6, #monate9, #ganzj {
     padding-left: 1em;
@@ -484,9 +507,11 @@ html {
 }
 #dog3{
     grid-area: dog3;
+    justify-content: right;
 }
 #cat3{
     grid-area: cat3;
+    justify-content: left;
 }
 #ihr{
     grid-area: ihr;
@@ -544,16 +569,17 @@ html {
     display:grid;
     border-radius: inherit;
     grid-template-columns: 6fr 2fr 2fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-areas:
     "brave_22 brave_22_dog brave_22_cat brave_22_dogcat brave_22_dogcat"
     "brave_23_bg brave_23_bg_dog brave_23_bg_cat brave_23_bg_dogcat brave_23_bg_dogcat"
     "brave_23_b brave_23_b_dog brave_23_b_cat brave_23_b_dogcat brave_23_b_dogcat"
-    ". . . . ."
     "final1 final1_num1 final1_num2 . ."
     "final2 final2_num1 final2_num2 . ."
     "final3 final3_num1 final3_num2 . .";
 }
+.brave_grid p{margin:0.5em 0 0.5em 0;}
+
 .space_around{
     display: flex;
     justify-content: space-around;
@@ -565,20 +591,25 @@ html {
     grid-area: brave_22;
     border-top-left-radius: inherit;
     
-    background-color: var(--color-secondary-500);
+    background-color: #602c6b;
 }
+#brave_22 h3 {
+    color: #FFFFFF;
+    font-size: 1.3em;
+}
+
 #brave_22 p{
     color: #FFFFFF;
 }
 #brave_22_dog{
-    background-color: var(--color-secondary-500);
+    background-color: #602c6b;
     grid-area: brave_22_dog;
 }
 #brave_22_dog p{
     color: #FFFFFF;
 }
 #brave_22_cat{
-    background-color: var(--color-secondary-500);
+    background-color: #602c6b;
     grid-area: brave_22_cat;
 }
 #brave_22_cat p{
@@ -586,7 +617,7 @@ html {
 }
 #brave_22_dogcat{
     grid-area: brave_22_dogcat;
-    background-color: var(--color-secondary-500);
+    background-color: #602c6b;
     border-top-right-radius: inherit;
 }
 #brave_22_dogcat p{
@@ -647,6 +678,7 @@ html {
 #final3_num2{
     grid-area:final3_num2;
 }
+
 
 
 @font-face {
