--- a/css/style.css
+++ b/css/style.css
@@ -680,6 +680,18 @@ html {
 }
 
 
+.bgperctext{
+	position:relative;
+}
+.bgperctext{
+	content: "%";
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -1;
+}
+
+
 
 @font-face {
 	font-family: "Invention";
